--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -41,3 +41,20 @@
     width: calc(100% - 30rem);
   }
 }
+
+
+.circle {
+    background-color: blue;
+    height: 100%;
+    border-radius: 100%;
+    text-align: center;
+    line-height: 200px;
+    font-size: 30px;
+}
+.circle span {
+    line-height: normal;
+    display:inline-block;
+    vertical-align: middle;
+    color: white;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+}
