--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -7,13 +7,13 @@
     border-radius: 35px;
 }
 
-#btn-add-person {
+#btn-add-family {
     position: fixed;
     bottom: 20px;
     right: 20px;
 }
 
-#btn-add-relation {
+#btn-download {
     position: fixed;
     bottom: 110px;
     right: 20px;
