--- a/client/public/global.css
+++ b/client/public/global.css
@@ -10,4 +10,6 @@ body {
 	padding: 0;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+
+	overflow: hidden;
 }
